--- a/.github/workflows/frcbuild.yml
+++ b/.github/workflows/frcbuild.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2-beta
     - name: FRC Build & Test
